# SrbLearn

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  srblearn.service
srblearn/: __init__.py  bot.py  config.py  db.py  feedback.py  level_advice.py  models.py  quiz_engine.py  scheduler.py  script_prefs.py  transliteration.py
srblearn/handlers/: __init__.py  common.py  quiz.py  settings.py  start.py  support.py
srblearn/vocabulary/: __init__.py  a1.json  a2.json  b1.json  b2.json  c1.json  c2.json
tests/: test_db.py  test_feedback.py  test_level_advice.py  test_quiz_engine.py  test_transliteration.py
