[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "srblearn"
version = "0.1.0"
description = "Telegram-бот для изучения сербского языка"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0",
    "APScheduler>=3.10",
    "aiosqlite>=0.19",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["srblearn*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
